tests/typing/should_fail/if.java
package tutu.titi.toto;

class A {
	public void method1() {
		if (1) {
			;;
		} else {
			;;
		}
	}
}
